# sudoku-solver-and-generator

./: Cargo.toml  demo.json  file.josn  planProjektu.md  plansza.json  readme.md
benches/: benchmark.rs
src/: board.rs  game.rs  lib.rs  macros.rs  main.rs  rules.rs  solver.rs  style.css  userinput.rs
src/gui/: app.rs  field.rs  field_button.rs  mod.rs  rule_button.rs
src/logic/: board.rs  game.rs  mod.rs  rules.rs  solver.rs  userinput.rs
