[package]
name = "sudoku_solver_and_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"
regex = "1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
relm4 = "0.9.1"
gtk = {version = "0.9", package = "gtk4"}

[[bench]]
name = "benchmark"
harness = false